--- a/Laboratorio2/Laboratorio2.Web/Views/_ViewImports.cshtml
+++ b/Laboratorio2/Laboratorio2.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,11 @@
-﻿@using Laboratorio1.Web
+﻿@using Microsoft.AspNetCore.Localization;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@using Onit.AspNetCore.Infrastructure;
+@using Laboratorio2.Web;
+@using Laboratorio2.Web.Infrastructure;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@* Not needed for Lab1, it has been put here to show how to inject services in views *@
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
+
+@* Not needed for Lab2, it has been put here to show how to inject services in views *@
 @* @inject IOptions<AppSettings> appSettings *@
