Corretti alcuni errori

--- a/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject IHtmlLocalizer<Laboratorio3.Web.SharedResource> SharedLocalizer
-@inject Microsoft.Extensions.Options.IOptions<AppSettings> appSettings
+﻿@inject Microsoft.Extensions.Options.IOptions<AppSettings> appSettings
 @{
     Layout = "_LayoutHtml";
     var version = System.Reflection.Assembly.GetAssembly(typeof(Startup)).GetName().Version;
