--- a/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Edit.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Edit.cshtml
@@ -66,7 +66,7 @@
                             </div>
                             <div class="form-group col-md-3 col-lg-4 col-xl-3">
                                 <label asp-for="Stato"></label>
-                                <select class="form-select form-select-sm" asp-for="Stato" asp-items="Model.Stati"></select>
+                                <select class="form-select form-select-sm" asp-for="Stato" asp-items="Model.StatiCliente"></select>
                                 <span asp-validation-for="Stato" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-6 col-lg-4 col-xl-3">
