--- a/Laboratorio3/Laboratorio3.Web/Areas/_ViewImports.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Areas/_ViewImports.cshtml
@@ -1,8 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization;
-@using Laboratorio3.Web
+﻿@using Laboratorio3.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@inject IHtmlLocalizer<SharedResource> SharedLocalizer
-
-@* Not needed for Lab2, it has been put here to show how to inject services in views *@
+@* Not needed for the Lab, it has been put here to show how to inject services in views *@
 @* @inject IOptions<AppSettings> appSettings *@
