--- a/Laboratorio3/Laboratorio3.Web/Views/Shared/_LayoutHtml.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/Shared/_LayoutHtml.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="@this.CurrentCulture().TwoLetterISOLanguageName">
+<html lang="it-IT">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,13 +7,12 @@
     <meta name="description" content="@ViewData["Description"]">
     @RenderSection("metas", false)
     <link href="~/css/bundle-global.min.css" asp-append-version="true" rel="stylesheet" />
-    @*     <link href="~/node_modules/@@fortawesome/fontawesome-free/css/all.css" asp-append-version="true" rel="stylesheet" /> *@
     @RenderSection("styles", false)
 </head>
 <body>
     @RenderBody()
     <script type="text/javascript">
-        var clientLocale = '@this.CurrentCulture().Name';
+        var clientLocale = 'it-IT';
     </script>
     <environment include="Development">
         <script src="~/js/bundle-global.js" asp-append-version="true"></script>
