Configurazioni e commenti per esercizio 2

--- a/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Clienti/Edit.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Clienti/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Laboratorio3.Web.Areas.Clienti.EditViewModel
+﻿@model Laboratorio3.Web.Areas.Clienti.Clienti.EditViewModel
 @{
     if (Model.Id != null)
     {
