--- a/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Laboratorio3.Web</a>
+                <a class="navbar-brand" href="@Url.Action(MVC.Home.Index())">Laboratorio3.Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,22 +21,28 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" href="@Url.Action(MVC.Home.Index())">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="@Url.Action(MVC.Home.Privacy())">Privacy</a>
+                        </li>
+                        @* ES2: Decommentare le seguenti righe per abilitare il menu clienti *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.Action(MVC.Clienti.Clienti.Index())">Clienti</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    @RenderSection("pageTitle", false)
+    @RenderSection("pageSubtitle", false)
     <main>
         @RenderBody()
     </main>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Laboratorio3.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Laboratorio3.Web - <a href="@Url.Action(MVC.Home.Privacy())">Privacy</a>
         </div>
     </footer>
 </div>
