--- a/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Clienti/Index.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Areas/Clienti/Clienti/Index.cshtml
@@ -78,8 +78,8 @@
                                     <td class="text-nowrap">@cliente.Comune</td>
                                     <td class="text-nowrap">@cliente.Provincia</td>
                                     <td class="text-nowrap">@cliente.CapitaleSociale</td>
-                                    <td class="text-nowrap">@cliente.DateDataPrimoOrdineAsString</td>
-                                    <td class="text-nowrap">@cliente.Stato</td>
+                                    <td class="text-nowrap">@cliente.DataPrimoOrdineAsString</td>
+                                    <td class="text-nowrap">@cliente.StatoAsString</td>
                                 </tr>
                             }
                         }
