Aggiunti commenti per esercitazione

--- a/Laboratorio3/Laboratorio3.Web/Views/_ViewImports.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,5 @@
 @using Laboratorio3.Web.Infrastructure;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@* Not needed for Lab2, it has been put here to show how to inject services in views *@
+@* Non usato in Lab3, solo a scopo illustrativo *@
 @* @inject IOptions<AppSettings> appSettings *@
