Rimossa temporaneamente configurazione nuget OnitSmart che causava problemi

--- a/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,6 @@
     </footer>
 </div>
 @section scripts{
-    @this.RenderScriptAlertsWithToastify()
+    @* @this.RenderScriptAlertsWithToastify() *@
     @RenderSection("scripts", false)
 }
