--- a/Laboratorio3/Laboratorio3.Web/Views/_ViewImports.cshtml
+++ b/Laboratorio3/Laboratorio3.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Onit.AspNetCore.Infrastructure;
+﻿@* @using Onit.AspNetCore.Infrastructure; *@
 @using Laboratorio3.Web;
 @using Laboratorio3.Web.Infrastructure;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
